--- a/content/posts/coding-with-llms.mdx
+++ b/content/posts/coding-with-llms.mdx
@@ -1,5 +1,5 @@
 ---
-title: How I code with LLMs
+title: How I code with LLMs these days
 description: Practical tips for developers looking to use AI coding assistants
 date: "2025-01-31"
 tags: ai, development
@@ -55,7 +55,7 @@ Web development, relatively boring backend development, mobile development, libr
 
 The easier it is to run and verify code, the more effective AI assistance becomes. This is why tasks with quick feedback loops (like frontend development or unit test writing) tend to work particularly well, but tasks with slower feedback loops (like non-kubernetes infrastructure code) can be more challenging.
 
-## Rethinking the deicsion to use libraries
+## Rethink the decision to use libraries
 
 One unexpected lesson I learned is that because AI makes it very cheap to generate code, I think differently about if I want to use a library or not.
 
@@ -139,33 +139,37 @@ lol okay
 </me>
 ```
 
-**In general, it's a good idea to "question" an AI model's suggestions here.**
+**In general, it's a good idea to "question" an AI model's suggestions here.** The first suggestion you get may not always be better. But importantly, asking an AI model to explain its answer in a critical light often leads to a better suggestion.
 
-However, AI has made me completely re-evaluate the second category. It's very often the case that I only need a small piece of functionality that a library provides me, or it's mostly a convenience thing. Because code is so cheap to generate now, I will usually just generate the code and tests for it, package it up somewhere, and have one less hellish dependency to manage over time.
+All that said, AI has made me completely re-evaluate the second category -- where a library is brought in because it saves some code and adds convenience. Because code is so cheap to generate now, I will usually just generate the code and tests for it, package it up somewhere, and have one less hellish dependency to manage over time.
+
+**Dependency management is much harder than re-generating code.**
 
 ## A different development loop
 
 With AI assistance, my development loop is more dynamic and iterative than the before-times, and requires several techniques that I've learned over time to be effective.
 
-### Building durable context
+### Build durable context
 
 [RAG](https://arxiv.org/abs/2005.11401) is something most people building with AI have learned is an essential pattern, and the quality of an AI integration is a direct function of the [relevancy, magnitude, and quality](./llms-three-properties) of the contextual data you pass to an AI model.
 
-This is especially true for using AI for real-world coding instead of tiny little side projects. However, this context needs to be durable. You can't just pass everything a model needs to know into each chat invocation. Here's how I approach it.
+This is especially true for using AI for real-world coding instead of tiny little side projects.
 
-#### Using projects or pasting context into a chat session
+#### Use projects/rules or paste context into a chat session
 
-I usually start by creating a "project" in the AI tool I'm using. In Claude or ChatGPT, this is literally called "projects", and these are a way to provide a bunch of files that make the model produce significantly better code.
+I usually start by creating an instruction/rules file or "project" in the AI tool I'm using. In Claude or ChatGPT, this is literally called "projects", and these are a way to provide a bunch of files that make the model produce significantly better code. [Cursor](https://docs.cursor.com/context/rules-for-ai) and [Copilot](https://copilot-instructions.md/) support custom instruction files 
 
-Note that it's not just text files that are supported, but also images. I've found that images are particularly useful for showing things like architecture diagrams or screenshots of a working app to contextualize how the code makes something work. You can also provide custom documents that reference other documents, such as a file that explains the names of several screenhots and how they relate to the codebase.
+Note that depending on your tool, it's not just text files that are supported, but also images. I've found that images are particularly useful for showing things like architecture diagrams or screenshots of a working app to contextualize how the code makes something work. You can also provide custom documents that reference other documents, such as a file that explains the names of several screenhots and how they relate to the codebase. Things like Claude Projects will pick this up.
 
-If you're not using a tool that supports this sort of thing, you can even get by with simply pasting in a single file -- preferably following the [llms.txt standard](https://llmstxt.org/) -- and your single chat session will produce substantially better code.
+If you're not using a tool that supports this sort of thing, you can even get by with simply pasting in a single file -- preferably following the [llms.txt standard](https://llmstxt.org/) -- and your single chat session will produce _shockingly_ better code.
+
+Just writing some custom rules or instructions or pasting in an llms.txt file will make a huge difference in the quality of the code you get back. However, you can take this a lot further by cross-referencing important context with the structure (and substructure) of your codebase. Athough tools like Cursor and Copilot do support [codebase indexing](https://docs.cursor.com/context/codebase-indexing), I've found that this only helps with finding likely-relevant code for a task and increasing the likelihood that the generated code can compile -- it doesn't embed actual knowledge of the codebase. To make sure it doesn't "go off the rails", you need to provide that context yourself.
 
 #### Sharing existing code structure and important context
 
-I typically start by dumping the output of [`tre`](https://github.com/dduan/tre) to a text file and including that. For simple projects, this alone can be enough to make AI coding assistants good enough.
+I typically start by dumping the output of [`tre`](https://github.com/dduan/tre) to a text file and including that with some basic instructions about code areas.
 
-For larger projects, I spend some time writing up an [llms.txt](https://llmstxt.org/) markdown file that describes the high-level goals of the system, the key areas of the codebase, and then the full file structure. This is a bit of work, but it's a one-time cost that pays off in the long run.
+For larger projects, I spend some time writing up a proper [llms.txt](https://llmstxt.org/) markdown file that describes the high-level goals of the system, key areas of the codebase with important knowledge, and then the full file structure. This is a bit of work, but it's a one-time cost that pays off in the long run.
 
 For example, here's one that could be used for a production system, [Refinery](https://github.com/honeycombio/refinery):
 
@@ -454,14 +458,51 @@ Refinery has many files and folders, but these in particular are most helpful to
     └── event_test.go
 ```
 
+### Get the LLM to update its own context
 
+As you iterate, you'll find that the LLM environment needs more pushing to "get things right" with respect to the context you've provided. Usually it will make an assumption about a module or file that isn't correct. The solution here is very simple:
 
-## Start Small, Think Big
+**Program your development environment**.
 
-The most common mistake I see developers make is trying to generate too much code at once. While modern AI models are capable of generating substantial amounts of code, the complexity of specifying behavior and constraints grows exponentially with the size of the generated codebase.
+Think of the LLM has a wobbly and weird kind of computer that's bad (or at least inefficient) at tasks like adding numbers together, but extremely good at being directionally accurate about things. You can guide its force vector towards the particular outcome you want.
 
-Instead, start with small, well-defined components or features. As you become more comfortable with the AI-assisted workflow, you'll naturally develop patterns for handling larger pieces of functionality. This approach also helps you build intuition about what kinds of tasks are well-suited to AI assistance and which are better handled traditionally.
+Given this, when you want it to have updated context, you can simply ask it to update its own context once you know it got something right. For example:
 
-Remember: the goal isn't to replace traditional development practices but to augment them with AI capabilities where they make sense. Sometimes that means generating an entire component; other times, it means using the AI as a sounding board for design decisions or documentation writing.
+- If you generated a new nextjs component that does an important thing and it works correctly, ask the LLM to update its context with the new file and a brief description of the purpose it serves.
+- If you added a new kind of protocol support for a library, ask the LLM to update internal documentation about protocol support.
+- If you shuffle data off to a new AWS service, ask the LLM to update its description of the data flow and AWS services used, and for which purpose.
 
-The future of development isn't about AI replacing developers—it's about developers who know how to effectively use AI tools outperforming those who don't. The sooner you start building that capability, the better positioned you'll be for what's coming next.
+You will still need to review things, but as you iterate and continually have better and more up-to-date context, you'll find that you don't need to correct it that often anymore.
+
+## Ask for small code changes, not big ones
+
+The advice here is no different than the general advice you find online about software engineering regarding small diffs, small deployments, etc.
+
+AI models are highly complex systems that increasingly get things wrong when you ask them to do too much at once. The solution is to simply have them do less. Some examples:
+
+- Don't generate an entire website at once. Generate a single component, then another, then another. Run your app and run tests each time.
+- Don't generate an entire API at once. Generate a single endpoint, work on the conventions that fit best, adjust your data model incrementally, etc.
+- Don't generate an internal library of utility functions at once.
+- Don't generate an entire new feature at once. Start with a task description, then iterate on a spec, then generate some code for the spec, then generate tests, run the tests, generate more code for the spec, etc.
+
+### Small changes with agents
+
+These guidelines are not hard and fast, but also hold true with agents in my experience. While an agent can do a better job of defining an internal library of utility functions given a desired goal and constraints (or just a spec), I've found that agents simply don't work well with existing codebases and nontrivial tasks. Right now, they seem especially tuned for generating brand-new codebases from sratch, and simple ones at that.
+
+For agents, my inuition so far is that you really need to establish firm guardrails around their scope. Think of an agent as helping implement a small ticket end-to-end, with you dictacting how it should clarify requirements, test code, and perform the iterative loop. I've found that if I don't do this, the agent will wander off into the wilderness and eventually just generate nonsensical, often uncompilable code.
+
+**You still have to think. Sorry!**
+
+## Where it's going from here
+
+I'm genuinely looking forward to revisiting this blog post in a year now that LLMs have gotten faster and cheaper, and that agents are starting to pop up. They're all still really bad at doing what they're advertised for, but they can be highly useful with some work.
+
+The future I'm looking for is one where programming is lifted up to another level of abstraction. Instead of writing a ton of code, we focus a lot more on:
+
+- What, exactly, we want to build
+- How we define an experiment and measurement criteria for what we build
+- Exploring many different approaches to solving a problem all at once
+- Automatically embedding best practices into code like robust tests, good observability and internal documentation, etc.
+- Finding out what we _don't_ know about a problem and how to solve it, and using these tools to facilitate learning about systems and the way they get used
+
+I think we're still a long way off from this reality. Even if we assume the current technical hurdles are solved -- which is absolutely, positively not a given -- there are other systematic hurdles involving human beings and the real world that need addressing. **To me, all signs point towards software engineering changing radically as a profession to be much more oriented around the _what_ and _why_ of software, and much less around the _how_**. This will cause disruption at a massive scale in the long run. But in the short run, it's just a lot of fun to play with these tools and see what they can do.
