--- a/content/posts/coding-with-llms.mdx
+++ b/content/posts/coding-with-llms.mdx
@@ -15,7 +15,7 @@ I've chosen to write this post specifically for those who are skeptical or have 
 
 ## But first, skill issue
 
-AI-assistants are tools, not magic, and to use them effectively, you need to develop skills to be effective. If there's one single thing to take away from my post, it's that AI is a tool that requires developing skills to weild effectively. If you do not invest in these skills, you will be ineffective using AI for coding.
+AI-assistants are tools, not magic, and to use them effectively, you need to develop skills to be effective. If there's one single thing to take away from my post, it's that AI is a tool that requires developing skills to wield effectively. If you do not invest in these skills, you will be ineffective using AI for coding.
 
 ## Use Claude and pay for it
 
