--- a/content/posts/coding-with-llms.mdx
+++ b/content/posts/coding-with-llms.mdx
@@ -43,7 +43,7 @@ AI coding assistants vary wildly in their effectiveness based on the kind of cod
 
 The more common the kind of code you're trying to write, the more likely an AI model will do a good job. For example, if you're writing a NextJS app with Tailwind CSS, most modern models will not only be up to date on the exact patterns that work best, but they'll also work with older versions too. But if you're writing code in your custom backend with significant domain-specific constraints, you'll probably find that the AI model struggles to generate code that fits your needs.
 
-That said, this doesn't mean you can't be effective with AI and domain-specific constraints. It just means you'll need to be more explicit about what you want, and you'll need to carefully specify what those constrains are up front. If don't know these contraints, or you can't explain them clearly to another person, you probably won't be able to get an AI model to work well with them either.
+That said, this doesn't mean you can't be effective with AI and domain-specific constraints. **It just means you'll need to be more explicit about what you want**, and you'll need to carefully specify what those constrains are up front. If don't know these contraints, or you can't explain them clearly to another person, you probably won't be able to get an AI model to work well with them either.
 
 ### Likelihood that similar code is widely available online
 
